# transaction_core

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
ledger/: models.py  repository.py
ledger/migrations/: 0001_initial.py  0002_remove_transaction_transaction_type_valid_and_more.py
wallet/: models.py  repository.py  serializers.py  service.py  tasks.py  tests.py  views.py
wallet/migrations/: 0001_initial.py
